Added support for View, Fixed some Messages, Added SELECT * query method, specified forward-only, read-only for query statements.